# funding-compiler

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: funding_sources.yaml  uark_meeg_faculty_sources.yaml
data/screenings/2026-06-11/: faculty_profiles.csv  opportunities.csv
docs/: architecture.md  data-schemas.md  faculty-expertise-intake.md  funding-source-registry.md  reporting-workflow.md
docs/screenings/2026-06-11/: alignment_matrix.csv  funding-screening-report.md
examples/: faculty.csv  opportunities.csv
site/: app.js  index.html  styles.css
site/data/: faculty_sources.json  funding_sources.json
site/screenings/: 2026-06-11.html
src/funding_compiler/: __init__.py  cli.py  faculty_sources.py  loaders.py  matching.py  models.py  reports.py  sources.py
tests/: test_faculty_sources.py  test_import.py  test_loaders.py  test_matching.py  test_reports.py  test_screening_report.py  test_site_data.py  test_sources.py
tools/: generate_screening_report.py  sync_site_data.py
