[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funding-compiler"
version = "0.1.0"
description = "Compile funding opportunities, summarize faculty capabilities, and match opportunities to researchers."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Han Hu" }
]
dependencies = [
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
funding-compiler = "funding_compiler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
